--- a/404.html
+++ b/404.html
@@ -332,6 +332,11 @@
 </div>
 
 	  
+<script>
+  var url = window.location;
+  var a = url.split('/');
+  console.log(a);
+</script>
   <div class="not-found">
     <h1 class="error-emoji">\(o_o)/</h1>
     <p class="error-text">/* 404 page not found. */</p>
